# UE4SS-Bootstrap

./: .gitignore  CMakeLists.txt  README.md  build.bat
config/: updater.ini
src/: default_config.inc.in  dllmain.cpp  ini.hpp  progress.cpp  progress.hpp  proxy.rc  proxy_generated.inc  updater.cpp  updater.hpp
tools/: dwmapi.exports  gen_proxy.py
